Taking the @ sign off my twitter handle

--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ social-network-links:
   email: "scottphuston@gmail.com"
   facebook: deanattali
   github: Scott-Huston
-  twitter: @genuine_doubt
+  twitter: genuine_doubt
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
