--- a/_config.yml
+++ b/_config.yml
@@ -38,13 +38,13 @@ avatar: "/img/Linkedin_pic_square.jpg"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
-navbar-text-col: "#404040"
-navbar-children-col: "#F5F5F5"
+navbar-col: "#405270"
+navbar-text-col: "#616161"
+navbar-children-col: "#405270"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
+footer-col: "#405270"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
