--- a/_config.yml
+++ b/_config.yml
@@ -39,13 +39,13 @@ avatar: "/img/Linkedin_pic_square.jpg"
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#405270"
-navbar-text-col: "#616161"
+navbar-text-col: "#f0e4aa"
 navbar-children-col: "#405270"
-page-col: "#FFFFFF"
+page-col: "#f0e4aa"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#405270"
-footer-text-col: "#777777"
+footer-text-col: "#f0e4aa"
 footer-link-col: "#404040"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
