Test edit to remove Resources tab

--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ description: A collection of projects and thoughts
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
+  Things I like:
+    - Cool places online: "https://slatestarcodex.com/"
+    - Interesting ideas: "https://www.google.com/search?q=liquid+democracy&oq=liquid+democracy&aqs=chrome..69i57j0l5.6463j0j7&sourceid=chrome&ie=UTF-8"
   Author's home: "http://scotthuston.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
