--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,9 @@ navbar-links:
   Things I like:
     - Cool places online: "cool_places_online"
     - Interesting ideas: "interesting_ideas"
-  Projects: "Robo_Romo"
+  Things I like:
+    - Cool places online: "cool_places_online"
+    - Interesting ideas: "interesting_ideas"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
