--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,11 @@ description: A collection of projects and thoughts
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  Things I like:
-    - Cool places online: "cool_places_online"
-    - Interesting ideas: "interesting_ideas"
-  Things I like:
-    - Cool places online: "cool_places_online"
-    - Interesting ideas: "interesting_ideas"
+  Projects:
+    - Robo Romo: "Robo_Romo"
+    - NBA Longevity: "NBA_Longevity"
+  Things I like: "cool_places_online"
+  
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
