--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,11 @@ navbar-links:
   Projects:
     - Robo Romo: "Robo_Romo"
     - NBA Longevity: "NBA_Longevity"
+    - Test: ""
   Things I like: "cool_places_online"
+  Test:
+    - Test1: "Robo_Romo"
+    - Test2: "interesting_ideas"
   
 
 # Image to show in the navigation bar - image must be a square (width = height)
