--- a/_config.yml
+++ b/_config.yml
@@ -24,12 +24,9 @@ navbar-links:
   Projects:
     - Robo Romo: "Robo_Romo"
     - NBA Longevity: "NBA_Longevity"
-    - Test: ""
-  Things I like: "cool_places_online"
-  Test:
-    - Test1: "Robo_Romo"
-    - Test2: "interesting_ideas"
-  
+  Things I like: 
+    - Cool places online: "cool_places_online"
+    - Interesting ideas: "interesting_ideas
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
