--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
     - NBA Longevity: "NBA_Longevity"
   Things I like: 
     - Cool places online: "cool_places_online"
-    - Interesting ideas: "interesting_ideas
+    - Interesting ideas: "interesting_ideas"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
