--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ navbar-links:
     - Yelp Insights: "Yelp_Insights"
     - Robo Romo: "Robo_Romo"
     - NBA Longevity: "NBA_Longevity"
-  Things I like: 
-    - Cool places online: "cool_places_online"
-    - Interesting ideas: "interesting_ideas"
+  # Things I like: 
+  #   - Cool places online: "cool_places_online"
+  #   - Interesting ideas: "interesting_ideas"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
