Added LinkedIn link

--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ social-network-links:
   twitter: genuine_doubt
 #  facebook: deanattali
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: https://www.linkedin.com/in/scott-huston-616512126/
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
